--- a/notebooks/composer/composer.ipynb
+++ b/notebooks/composer/composer.ipynb
@@ -39,9 +39,12 @@
         "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "from datetime import datetime\n",
         "import functools\n",
+        "import os\n",
         "import pprint\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
+        "# from jax.config import config\n",
+        "# config.update(\"jax_debug_nans\", True)\n",
         "from IPython.display import HTML, clear_output\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -259,7 +262,7 @@
       "provenance": [
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1632316642406
+          "timestamp": 1632487130048
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
