--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -208,19 +208,18 @@
         "# We determined some reasonable hyperparameters offline and share them here.\n",
         "train_fn = {\n",
         "  'ant': functools.partial(\n",
-        "      ppo.train, num_timesteps = 50000000, log_frequency = 20,\n",
+        "      ppo.train, num_timesteps = 30000000, log_frequency = 20,\n",
         "      reward_scaling = 10, episode_length = 1000, normalize_observations = True,\n",
         "      action_repeat = 1, unroll_length = 5, num_minibatches = 32,\n",
-        "      num_update_epochs = 4, discounting = 0.95, learning_rate = 3e-4,\n",
+        "      num_update_epochs = 4, discounting = 0.97, learning_rate = 3e-4,\n",
         "      entropy_cost = 1e-2, num_envs = 2048, batch_size = 1024\n",
         "  ),\n",
         "  'humanoid': functools.partial(\n",
-        "      sac.train, num_timesteps = 1048576 * 2.2,\n",
-        "      log_frequency = 131012, reward_scaling = 100, episode_length = 1000,\n",
-        "      normalize_observations = True, action_repeat = 1, discounting = 0.99,\n",
-        "      learning_rate = 4.5e-4, num_envs = 128, batch_size = 512,\n",
-        "      min_replay_size = 8192, max_replay_size = 1048576,\n",
-        "      grad_updates_per_step = 0.25, max_devices_per_host = 8\n",
+        "      ppo.train, num_timesteps = 50000000, log_frequency = 20,\n",
+        "      reward_scaling = 0.1, episode_length = 1000, normalize_observations = True,\n",
+        "      action_repeat = 1, unroll_length = 10, num_minibatches = 32,\n",
+        "      num_update_epochs = 8, discounting = 0.97, learning_rate = 3e-4,\n",
+        "      entropy_cost = 1e-3, num_envs = 2048, batch_size = 1024, seed=1\n",
         "  ),\n",
         "  'fetch': functools.partial(\n",
         "      ppo.train, num_timesteps = 100_000_000, log_frequency = 20,\n",
