--- a/notebooks/braxlines/dmin.ipynb
+++ b/notebooks/braxlines/dmin.ipynb
@@ -100,7 +100,7 @@
         "#@markdown [irl_smm/evaluators.py](https://github.com/google/brax/blob/main/brax/experimental/braxlines/vgcrl/evaluators.py)\n",
         "#@markdown are directly comparable across experiment runs with different\n",
         "#@markdown **experiment parameters**. \n",
-        "env_name = 'ant'  # @param ['ant', 'humanoid', 'halfcheetah', 'uni_ant', 'bi_ant']\n",
+        "env_name = 'halfcheetah'  # @param ['ant', 'humanoid', 'halfcheetah', 'uni_ant', 'bi_ant']\n",
         "obs_indices = 'vel'  # @param ['vel']\n",
         "target_num_modes =   2# @param{'type': 'integer'}\n",
         "obs_scale = 8.0 #@param{'type': 'number'}\n",
@@ -117,7 +117,7 @@
         "\n",
         "#@markdown **Experiment Parameters**\n",
         "#@markdown See [irl_smm/utils.py](https://github.com/google/brax/blob/main/brax/experimental/braxlines/irl_smm/utils.py)\n",
-        "reward_type = \"gail2\"  # @param ['gail', 'airl', 'gail2', 'fairl', 'mle']\n",
+        "reward_type = \"mle\"  # @param ['gail', 'airl', 'gail2', 'fairl', 'mle']\n",
         "logits_clip_range = 10.0# @param {'type': 'number'}\n",
         "normalize_obs_for_disc = False # @param {'type': 'boolean'}\n",
         "normalize_obs_for_rl = True # @param {'type': 'boolean'}\n",
@@ -152,11 +152,13 @@
         "rng = jax.random.PRNGKey(seed=0)\n",
         "jit_get_dist = jax.jit(\n",
         "    functools.partial(\n",
-        "        irl_utils.get_multimode_2d_dist, num_modes=target_num_modes, scale=obs_scale))\n",
+        "        irl_utils.get_multimode_dist,\n",
+        "        indexed_obs_dim=len(obs_indices),\n",
+        "        num_modes=target_num_modes, scale=obs_scale))\n",
         "target_dist = jit_get_dist()\n",
-        "target_data_2d = target_dist.sample(\n",
+        "target_data = target_dist.sample(\n",
         "    seed=rng, sample_shape=(target_num_samples,))\n",
-        "target_data = target_data_2d[..., :len(obs_indices)]\n",
+        "target_data_2d = irl_utils.make_2d(target_data)\n",
         "\n",
         "print(f'target_data={target_data.shape}')\n",
         "plt.scatter(\n",
@@ -165,6 +167,17 @@
         "plt.ylim((-obs_scale, obs_scale))\n",
         "plt.title('target')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KyiOtw6LvZ76"
+      },
+      "outputs": [],
+      "source": [
+        "target_data.shape"
       ]
     },
     {
@@ -306,6 +319,7 @@
         "\n",
         "extra_loss_fns = dict(disc_loss=disc.disc_loss_fn)\n",
         "inference_fn, params, _ = train_fn(\n",
+        "    seed=seed,\n",
         "    environment_fn=env_fn,\n",
         "    progress_fn=progress,\n",
         "    extra_params=extra_params,\n",
@@ -395,7 +409,7 @@
       "provenance": [
         {
           "file_id": "1VwIb25nv6nJT52pSuZn4ldtAWKGvENwl",
-          "timestamp": 1631716011243
+          "timestamp": 1632657800308
         },
         {
           "file_id": "1Gu8SgV7reDUv8weq2P6PRq_YQ2f88Ahv",
