--- a/notebooks/braxlines/experiment_viewer.ipynb
+++ b/notebooks/braxlines/experiment_viewer.ipynb
@@ -37,6 +37,7 @@
         "# @title Colab setup and imports\n",
         "import numpy as np\n",
         "import os\n",
+        "from typing import Tuple\n",
         "from IPython.display import clear_output\n",
         "\n",
         "try:\n",
@@ -50,16 +51,18 @@
         "output_path1 = '' #@param{'type': 'string'}\n",
         "output_path2 = '' #@param{'type': 'string'}\n",
         "output_path3 = '' #@param{'type': 'string'}\n",
+        "# output_pathN ... add more if needed\n",
+        "output_paths = [output_path1, output_path2, output_path3]\n",
+        "output_structure = '**/**/**/training_curves.csv' #@param{type: 'string'}\n",
         "\n",
         "from brax.io import file\n",
-        "from brax.experimental.braxlines.common import logger_utils\n",
+        "from brax.experimental.braxlines import experiments\n",
         "\n",
-        "output_paths = [output_path1, output_path2, output_path3]\n",
         "csv_files = []\n",
         "for output_path in output_paths:\n",
         "  if not output_path:\n",
         "    continue\n",
-        "  pattern = f'{output_path}/**/training_curves.csv'\n",
+        "  pattern = f'{output_path}/{output_structure}'\n",
         "  csv_files_ = file.Glob(pattern)\n",
         "  csv_files += csv_files_\n",
         "  print(f'Found {len(csv_files_)} files matching {pattern}')\n",
@@ -75,12 +78,19 @@
       "outputs": [],
       "source": [
         "# @title Load data\n",
-        "data = {}\n",
-        "for i, csv_file in enumerate(csv_files):\n",
-        "  key = os.path.basename(os.path.dirname(csv_file))\n",
-        "  print(f'[{i+1}/{len(csv_files)}]')\n",
-        "  data[key] = {label_rename(k): np.array(v) for k, v in \n",
-        "               logger_utils.parse_csv(csv_file, verbose=True).items()}"
+        "data = experiments.load_data(csv_files)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HRXt97Qj_mLh"
+      },
+      "outputs": [],
+      "source": [
+        "# @title Compute data statistics\n",
+        "statistics= experiments.compute_statistics(data)"
       ]
     },
     {
@@ -92,54 +102,20 @@
       "outputs": [],
       "source": [
         "# @title Plot data\n",
-        "import math\n",
         "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import re\n",
         "\n",
-        "def spec(N):\n",
-        "  t = np.linspace(-510, 510, N)\n",
-        "  return np.clip(np.stack([-t, 510 - np.abs(t), t], axis=1), 0, 255) / 255.\n",
-        "\n",
+        "ncols = 5 # @param{type: 'integer'}\n",
         "xmax = 3e8# @param{type: 'number'}\n",
         "xlabel = 'num_steps' # @param['num_steps']\n",
-        "ylabel = 'eval/episode_reward' # @param['eval/episode_reward', 'metrics/entropy_z', 'metrics/entropy_all', 'losses/disc_loss', 'metrics/lgr', 'metrics/mi', '(lgr|episode_reward|mi)', '(episode_reward|energy_dist)']\n",
-        "filter_regex = '' # @param{'type': 'string'}\n",
-        "filter_regex = f'.*{filter_regex}.*'\n",
-        "filter_ylabel = f'.*{ylabel}.*'\n",
+        "ylabel_re = '(lgr|episode_reward|mi)' # @param['eval/episode_reward', 'metrics/entropy_z', 'metrics/entropy_all', 'losses/disc_loss', 'metrics/lgr', 'metrics/mi', '(lgr|episode_reward|mi)', '(episode_reward|energy_dist)']\n",
+        "key_include_re= 'humanoid' # @param{'type': 'string'}\n",
+        "key_exclude_re= '' # @param{'type': 'string'}\n",
         "\n",
-        "ylabels = sorted(list(data.values())[0].keys())\n",
-        "ylabels = [y for y in ylabels if re.match(filter_ylabel, y)]\n",
-        "\n",
-        "ncols = 5\n",
-        "nrows = int(math.ceil(len(ylabels)/ncols))\n",
-        "fig, axs = plt.subplots(ncols=ncols, nrows=nrows, figsize=(4.5 *ncols,4 *nrows))\n",
-        "plot_data = {k:v for k, v in data.items() if re.match(filter_regex, k) and 'FULL' not in k}\n",
-        "colors = spec(len(plot_data))\n",
-        "for i, y in enumerate(ylabels):\n",
-        "\n",
-        "  axcolor = None\n",
-        "  axalpha = None\n",
-        "  ax = axs\n",
-        "  row, col = int(i/ncols), i%ncols\n",
-        "  if nrows \u003e 1:\n",
-        "    ax = ax[row]\n",
-        "  if ncols \u003e 1:\n",
-        "    ax = ax[col] \n",
-        "  for (k, v), c in zip(sorted(plot_data.items()), colors):\n",
-        "    if y in v:\n",
-        "      filter = v[xlabel] \u003c= xmax\n",
-        "      xv = v[xlabel][filter]\n",
-        "      yv = v[y][filter]\n",
-        "      ax.plot(v[xlabel][filter], v[y][filter], label=k, c=c, alpha=0.8)\n",
-        "      if axcolor:\n",
-        "        ax.patch.set_facecolor(axcolor)\n",
-        "      if axalpha is not None:\n",
-        "        ax.patch.set_alpha(axalpha) \n",
-        "\n",
-        "  ax.set(xlabel=xlabel, ylabel=y)\n",
-        "  ax.legend()\n",
-        "fig.tight_layout()\n",
+        "experiments.plot_statistics(\n",
+        "    statistics, ncols=ncols, xmax=xmax, xlabel=xlabel,\n",
+        "    ylabel_re=ylabel_re,\n",
+        "    key_include_re=key_include_re,\n",
+        "    key_exclude_re=key_exclude_re)\n",
         "plt.show()"
       ]
     }
@@ -157,7 +133,7 @@
       "provenance": [
         {
           "file_id": "1-fplVbCqf5xQaosZXC9UcaiKfNpsNKjx",
-          "timestamp": 1631845056521
+          "timestamp": 1632657405686
         },
         {
           "file_id": "1zvUdazhGU7ZjPl-Vb2GSESCWtEgiw2bJ",
