--- a/notebooks/braxlines/mimax.ipynb
+++ b/notebooks/braxlines/mimax.ipynb
@@ -47,11 +47,11 @@
         "import math\n",
         "import os\n",
         "import pprint\n",
-        "\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
         "from IPython.display import HTML, clear_output\n",
         "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "\n",
         "try:\n",
         "  import brax\n",
@@ -306,7 +306,7 @@
         "extra_loss_fns = dict(disc_loss=disc.disc_loss_fn) if extra_params else None\n",
         "_, params, _ = train_fn(\n",
         "    environment_fn=env_fn, progress_fn=progress, extra_params=extra_params,\n",
-        "    extra_loss_fns=extra_loss_fns,\n",
+        "    extra_loss_fns=extra_loss_fns, seed=seed,\n",
         ")\n",
         "clear_output(wait=True)\n",
         "plot(output_path=output_path)\n",
@@ -403,9 +403,15 @@
         "    time_last_n=time_last_n,\n",
         "    num_1d_bins = num_1d_bins,\n",
         "    num_2d_bins = num_2d_bins,\n",
+        "    custom_obs_indices = tuple(range(base_env.observation_size))[:25],\n",
+        "    custom_obs_scale = obs_scale,\n",
         "    verbose = True,\n",
         "    seed=eval_seed)\n",
-        "pprint.pprint(metrics)"
+        "mi = {k.split('/')[-1]: float(v)\n",
+        " for k, v in metrics.items() if 'mi_1d' in k}\n",
+        "mi = sorted(mi.items(),\n",
+        "            key=lambda x: x[1], reverse=True)\n",
+        "pprint.pprint(mi)"
       ]
     },
     {
@@ -457,7 +463,7 @@
       "provenance": [
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
-          "timestamp": 1631716086810
+          "timestamp": 1632657583895
         }
       ]
     },
