--- a/notebooks/composer/composer.ipynb
+++ b/notebooks/composer/composer.ipynb
@@ -91,8 +91,8 @@
         "#@title Create a custom env\n",
         "#@markdown See [env_descs.py](https://github.com/google/brax/blob/main/brax/experimental/composer/env_descs.py)\n",
         "#@markdown for more supported `env_name`.\n",
-        "env_name = 'custom_ant_push' # @param ['custom_ant_push', 'ant_run', 'ant_chase', 'ant_push']\n",
-        "mode = 'print_obs'# @param ['print_obs', 'print_sys', 'viewer']\n",
+        "env_name = 'pro_ant_run' # @param ['custom_ant_push', 'pro_ant_run', 'ant_run', 'ant_chase', 'ant_push']\n",
+        "mode = 'viewer'# @param ['print_obs', 'print_sys', 'viewer']\n",
         "output_path = '' # @param {type: 'string'}\n",
         "if output_path:\n",
         "  output_path = f'{output_path}/{datetime.now().strftime(\"%Y%m%d\")}' \n",
@@ -100,9 +100,15 @@
         "  print(f'Saving outputs to {output_path}')\n",
         "\n",
         "desc_edits = {\n",
-        "    'components.cap1.reward_fns.goal.scale': 5,\n",
-        "    'components.cap1.reward_fns.goal.target_goal': 5,\n",
+        "    'custom_ant_push': {\n",
+        "      'components.cap1.reward_fns.goal.scale': 5,\n",
+        "      'components.cap1.reward_fns.goal.target_goal': 5,\n",
+        "    },\n",
+        "    'pro_ant_run': {\n",
+        "      'components.ant1.component_params.num_legs': 2,  \n",
+        "    },\n",
         "}\n",
+        "desc_edits = desc_edits.get(env_name, {})\n",
         "env_descs = {\n",
         "     'custom_ant_push':\n",
         "        dict(\n",
@@ -147,7 +153,8 @@
         "  env_fn = composer.create_fn(\n",
         "      env_desc=env_desc, desc_edits=desc_edits)\n",
         "else:\n",
-        "  env_fn = composer.create_fn(env_name=env_name)\n",
+        "  env_fn = composer.create_fn(env_name=env_name,\n",
+        "                              desc_edits=desc_edits)\n",
         "env = env_fn()\n",
         "show_env(env, mode)"
       ]
@@ -162,6 +169,7 @@
       "source": [
         "#@title Training the custom env\n",
         "num_timesteps_multiplier =   3# @param {type: 'number'}\n",
+        "seed = 0 # @param{type: 'integer'}\n",
         "skip_training = False # @param {type: 'boolean'}\n",
         "\n",
         "log_path = output_path\n",
@@ -174,6 +182,7 @@
         "n = num_timesteps_multiplier\n",
         "train_fn = functools.partial(\n",
         "    ppo.train,\n",
+        "    seed=seed,\n",
         "    num_timesteps=int(50_000_000 * n),\n",
         "    log_frequency=20, reward_scaling=10,\n",
         "    episode_length=1000, normalize_observations=True,\n",
@@ -262,7 +271,7 @@
       "provenance": [
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1632487130048
+          "timestamp": 1632657536732
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
