--- a/notebooks/braxlines/experiment_viewer.ipynb
+++ b/notebooks/braxlines/experiment_viewer.ipynb
@@ -90,7 +90,7 @@
       "outputs": [],
       "source": [
         "# @title Compute data statistics\n",
-        "statistics= experiments.compute_statistics(data)"
+        "statistics, filepaths = experiments.compute_statistics(data)"
       ]
     },
     {
@@ -104,16 +104,18 @@
         "# @title Plot data\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "ncols = 5 # @param{type: 'integer'}\n",
+        "ncols =  4# @param{type: 'integer'}\n",
         "xmax = 3e8# @param{type: 'number'}\n",
         "xlabel = 'num_steps' # @param['num_steps']\n",
-        "ylabel_re = '(lgr|episode_reward|mi)' # @param['eval/episode_reward', 'metrics/entropy_z', 'metrics/entropy_all', 'losses/disc_loss', 'metrics/lgr', 'metrics/mi', '(lgr|episode_reward|mi)', '(episode_reward|energy_dist)']\n",
-        "key_include_re= 'humanoid' # @param{'type': 'string'}\n",
+        "ylabel_re = '(episode_reward|energy_dist)' # @param['eval/episode_reward', 'metrics/entropy_z', 'metrics/entropy_all', 'losses/disc_loss', 'metrics/lgr', 'metrics/mi', '(lgr|episode_reward|mi|entropy_all)', '(episode_reward|energy_dist)']\n",
+        "key_include_re= 'ant' # @param{'type': 'string'}\n",
         "key_exclude_re= '' # @param{'type': 'string'}\n",
+        "legend_tags =  None# @param{type: 'raw'}\n",
         "\n",
-        "experiments.plot_statistics(\n",
+        "summaries = experiments.plot_statistics(\n",
         "    statistics, ncols=ncols, xmax=xmax, xlabel=xlabel,\n",
         "    ylabel_re=ylabel_re,\n",
+        "    legend_tags=legend_tags,\n",
         "    key_include_re=key_include_re,\n",
         "    key_exclude_re=key_exclude_re)\n",
         "plt.show()"
@@ -133,7 +135,7 @@
       "provenance": [
         {
           "file_id": "1-fplVbCqf5xQaosZXC9UcaiKfNpsNKjx",
-          "timestamp": 1632657405686
+          "timestamp": 1632951144835
         },
         {
           "file_id": "1zvUdazhGU7ZjPl-Vb2GSESCWtEgiw2bJ",
