--- a/notebooks/composer/composer.ipynb
+++ b/notebooks/composer/composer.ipynb
@@ -105,7 +105,7 @@
         "      'components.cap1.reward_fns.goal.target_goal': 5,\n",
         "    },\n",
         "    'pro_ant_run': {\n",
-        "      'components.ant1.component_params.num_legs': 2,  \n",
+        "      'components.agent1.component_params.num_legs': 8,  \n",
         "    },\n",
         "}\n",
         "desc_edits = desc_edits.get(env_name, {})\n",
@@ -271,7 +271,7 @@
       "provenance": [
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1632657536732
+          "timestamp": 1632964916407
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
