--- a/notebooks/braxlines/dmin.ipynb
+++ b/notebooks/braxlines/dmin.ipynb
@@ -319,7 +319,7 @@
         "\n",
         "extra_loss_fns = dict(disc_loss=disc.disc_loss_fn)\n",
         "inference_fn, params, _ = train_fn(\n",
-        "    seed=seed,\n",
+        "    seed=0,\n",
         "    environment_fn=env_fn,\n",
         "    progress_fn=progress,\n",
         "    extra_params=extra_params,\n",
