--- a/notebooks/composer/composer.ipynb
+++ b/notebooks/composer/composer.ipynb
@@ -73,6 +73,15 @@
         "    pprint.pprint(composer.get_env_obs_dict_shape(env))\n",
         "  elif mode == 'print_sys':\n",
         "    pprint.pprint(env.unwrapped.composer.metadata.config_json)\n",
+        "  elif mode == 'print_step':\n",
+        "    jit_env_reset = jax.jit(env.reset)\n",
+        "    jit_env_step = jax.jit(env.step)\n",
+        "    state0 = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
+        "    state1 = jit_env_step(state0, jnp.zeros((env.action_size,)))\n",
+        "    print(f'obs0={state0.obs.shape}') \n",
+        "    print(f'obs1={state1.obs.shape}') \n",
+        "    print(f'rew0={state0.reward}') \n",
+        "    print(f'rew1={state1.reward}') \n",
         "  else:\n",
         "    jit_env_reset = jax.jit(env.reset)\n",
         "    state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
@@ -91,8 +100,8 @@
         "#@title Create a custom env\n",
         "#@markdown See [env_descs.py](https://github.com/google/brax/blob/main/brax/experimental/composer/env_descs.py)\n",
         "#@markdown for more supported `env_name`.\n",
-        "env_name = 'pro_ant_run' # @param ['custom_ant_push', 'pro_ant_run', 'ant_run', 'ant_chase', 'ant_push']\n",
-        "mode = 'viewer'# @param ['print_obs', 'print_sys', 'viewer']\n",
+        "env_name = 'pro_ant_run' # @param ['ant_chase_ma', 'custom_ant_push', 'pro_ant_run', 'ant_run', 'ant_chase', 'ant_push']\n",
+        "mode = 'viewer'# @param ['print_step', 'print_obs', 'print_sys', 'viewer']\n",
         "output_path = '' # @param {type: 'string'}\n",
         "if output_path:\n",
         "  output_path = f'{output_path}/{datetime.now().strftime(\"%Y%m%d\")}' \n",
@@ -130,12 +139,6 @@
         "                            offset=5,\n",
         "                            scale=1,\n",
         "                            target_goal=4)),\n",
-        "                    score_fns=dict(\n",
-        "                        goal=dict(\n",
-        "                            reward_type='root_goal',\n",
-        "                            sdcomp='vel',\n",
-        "                            indices=(0, 1),\n",
-        "                            target_goal=4)),\n",
         "                ),\n",
         "            ),\n",
         "            edges=dict(\n",
@@ -145,7 +148,6 @@
         "                    ],\n",
         "                    reward_fns=dict(\n",
         "                        dist=dict(reward_type='root_dist', offset=5)),\n",
-        "                    score_fns=dict(dist=dict(reward_type='root_dist')),\n",
         "                ),)),\n",
         "}\n",
         "if env_name in env_descs:\n",
@@ -271,7 +273,7 @@
       "provenance": [
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1632964916407
+          "timestamp": 1634047909492
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
