--- a/notebooks/composer/composer.ipynb
+++ b/notebooks/composer/composer.ipynb
@@ -58,11 +58,11 @@
         "from brax.io import html\n",
         "from brax.experimental.composer import composer\n",
         "from brax.experimental.composer import component_editor\n",
-        "from brax.experimental.composer import register_default_components\n",
+        "from brax.experimental.braxlines import experiments\n",
         "from brax.experimental.braxlines.common import evaluators\n",
         "from brax.experimental.braxlines.common import logger_utils\n",
+        "from brax.experimental.braxlines.training import mappo\n",
         "from brax.experimental.braxlines.training import ppo\n",
-        "register_default_components()\n",
         "\n",
         "if \"COLAB_TPU_ADDR\" in os.environ:\n",
         "  from jax.tools import colab_tpu\n",
@@ -81,7 +81,8 @@
         "    print(f'obs0={state0.obs.shape}') \n",
         "    print(f'obs1={state1.obs.shape}') \n",
         "    print(f'rew0={state0.reward}') \n",
-        "    print(f'rew1={state1.reward}') \n",
+        "    print(f'rew1={state1.reward}')\n",
+        "    print(f'action0={(env.action_size,)}') \n",
         "  else:\n",
         "    jit_env_reset = jax.jit(env.reset)\n",
         "    state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
@@ -101,7 +102,7 @@
         "#@markdown See [env_descs.py](https://github.com/google/brax/blob/main/brax/experimental/composer/env_descs.py)\n",
         "#@markdown for more supported `env_name`.\n",
         "env_name = 'pro_ant_run' # @param ['ant_chase_ma', 'custom_ant_push', 'pro_ant_run', 'ant_run', 'ant_chase', 'ant_push']\n",
-        "mode = 'viewer'# @param ['print_step', 'print_obs', 'print_sys', 'viewer']\n",
+        "mode = 'print_step'# @param ['print_step', 'print_obs', 'print_sys', 'viewer']\n",
         "output_path = '' # @param {type: 'string'}\n",
         "if output_path:\n",
         "  output_path = f'{output_path}/{datetime.now().strftime(\"%Y%m%d\")}' \n",
@@ -180,59 +181,30 @@
         "tab = logger_utils.Tabulator(output_path=log_path,\n",
         "    append=False)\n",
         "\n",
-        "# We determined some reasonable hyperparameters offline and share them here.\n",
-        "n = num_timesteps_multiplier\n",
-        "train_fn = functools.partial(\n",
-        "    ppo.train,\n",
-        "    seed=seed,\n",
-        "    num_timesteps=int(50_000_000 * n),\n",
-        "    log_frequency=20, reward_scaling=10,\n",
-        "    episode_length=1000, normalize_observations=True,\n",
-        "    action_repeat=1, unroll_length=5,\n",
-        "    num_minibatches=32, num_update_epochs=4,\n",
-        "    discounting=0.95, learning_rate=3e-4,\n",
-        "    entropy_cost=1e-2, num_envs=2048,\n",
-        "    extra_step_kwargs=False, batch_size=1024)\n",
+        "ppo_lib = mappo if env.metadata.agent_groups else ppo\n",
+        "ppo_params = experiments.defaults.get_ppo_params(\n",
+        "    'ant', num_timesteps_multiplier)\n",
+        "train_fn = functools.partial(ppo_lib.train, **ppo_params)\n",
         "\n",
         "times = [datetime.now()]\n",
-        "plotdata = {}\n",
         "plotpatterns = ['eval/episode_reward', 'eval/episode_score']\n",
         "\n",
-        "def progress(num_steps, metrics, params):\n",
-        "  times.append(datetime.now())\n",
-        "  plotkeys = []\n",
-        "  for key, v in metrics.items():\n",
-        "    assert not jnp.isnan(v), f'{key} {num_steps} NaN'\n",
-        "    plotdata[key] = plotdata.get(key, dict(x=[], y=[]))\n",
-        "    plotdata[key]['x'] += [num_steps]\n",
-        "    plotdata[key]['y'] += [v]\n",
-        "    if any(x in key for x in plotpatterns):\n",
-        "      plotkeys += [key]\n",
-        "  if num_steps \u003e 0:\n",
-        "    tab.add(num_steps=num_steps, **metrics)\n",
-        "    tab.dump()\n",
-        "  clear_output(wait=True)\n",
-        "  num_figs = max(len(plotkeys), 2)\n",
-        "  fig, axs = plt.subplots(ncols=num_figs, figsize=(3.5 * num_figs, 3))\n",
-        "  for i, key in enumerate(plotkeys):\n",
-        "    if key in plotdata:\n",
-        "      axs[i].plot(plotdata[key]['x'], plotdata[key]['y'])\n",
-        "    axs[i].set(xlabel='# environment steps', ylabel=key)\n",
-        "    axs[i].set_xlim([0, train_fn.keywords['num_timesteps']])\n",
-        "  fig.tight_layout()\n",
-        "  plt.show()\n",
+        "progress, _, _, _ = experiments.get_progress_fn(\n",
+        "    plotpatterns, times, tab=tab, max_ncols=5,\n",
+        "    xlim=[0, train_fn.keywords['num_timesteps']],\n",
+        "    pre_plot_fn = lambda : clear_output(wait=True),\n",
+        "    post_plot_fn = plt.show)\n",
         "\n",
         "if skip_training:\n",
-        "  core_env = env_fn()\n",
-        "  params, inference_fn = ppo.make_params_and_inference_fn(\n",
-        "    core_env.observation_size,\n",
-        "    core_env.action_size,\n",
+        "  action_size = env.group_action_shapes if env.metadata.agent_groups else env.action_size\n",
+        "  params, inference_fn = ppo_lib.make_params_and_inference_fn(\n",
+        "    env.observation_size, action_size,\n",
         "    normalize_observations=True)\n",
         "  inference_fn = jax.jit(inference_fn)\n",
         "else:\n",
         "  inference_fn, params, _ = train_fn(\n",
-        "    environment_fn=env_fn,\n",
-        "    progress_fn=progress)\n",
+        "    environment_fn=env_fn, seed=seed,\n",
+        "    extra_step_kwargs=False, progress_fn=progress)\n",
         "  print(f'time to jit: {times[1] - times[0]}')\n",
         "  print(f'time to train: {times[-1] - times[1]}')\n",
         "  print(f'Saved logs to {log_path}')\n",
@@ -273,7 +245,7 @@
       "provenance": [
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1634047909492
+          "timestamp": 1635166311502
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
